# bottomspeak

./: Cargo.toml  README.md  spec.uwu
bottomspeak-interp/: Cargo.toml
bottomspeak-interp/src/: diagnostic.rs  diagnostics.rs  env.rs  interpreter.rs  lib.rs  source.rs  vm.rs
bottomspeak-interp/src/lexer/: mod.rs  tests.rs  token.rs
bottomspeak-interp/src/vm/: mod.rs
bottomspeak-macros/: Cargo.toml
bottomspeak-macros/src/: lib.rs
examples/: ansi.uwu  ascii.uwu  fibonacci.uwu  haiii.uwu  hawwo_wowd.uwu
src/: diagnostics.rs  env.rs  interpreter.rs  main.rs  source.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/parser/: mod.rs
src/vm/: mod.rs  tests.rs
