[package]
name = "bottomspeak"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "string"] }
bottomspeak-interp = { path = "./bottomspeak-interp" }
bottomspeak-macros = { path = "./bottomspeak-macros" }

[workspace]
resolver = "3"
members = ["bottomspeak-interp", "bottomspeak-macros"]
