[package]
name = "bottomspeak"
description = "An esoteric programming language for bottoms."
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/oughtum/bottomspeak"
keywords = ["esolang", "trans"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "string"] }
bottomspeak-interp = { path = "./bottomspeak-interp" }
bottomspeak-macros = { path = "./bottomspeak-macros" }

[workspace]
resolver = "3"
members = ["bottomspeak-interp", "bottomspeak-macros"]
