[package]
name = "bottomspeak"
description = "An esoteric programming language for bottoms."
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/oughtum/bottomspeak"
keywords = ["esolang", "trans"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "string"] }
bottomspeak-macros = "0.1.0"
codespan = "0.13.1"
codespan-reporting = "0.13.1"
owo-colors = "4.3.0"
rand = "0.10.2"
crossterm = "0.29.0"

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"
