[package]
name = "bottomspeak-macros"
description = "Macros for bottomspeak"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0"
repository = "https://github.com/oughtum/bottomspeak"
keywords = ["esolang", "trans"]

[dependencies]
codespan-reporting = "0.13.1"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["derive"] }

[lib]
proc-macro = true
